updated src/widget.tsx with astal-battery usage and modified default.scss

--- a/src/statusbar/default.scss
+++ b/src/statusbar/default.scss
@@ -15,4 +15,9 @@ window.Statusbar {
     button {
         background: transparent;
     }
+
+    calender * {
+        background: $bg-trans;
+        border: none;
+    }
 }
