--- a/src/statusbar/colors.css
+++ b/src/statusbar/colors.css
@@ -1,2 +1,3 @@
 @define-color transp_bg alpha(@window_bg_color, 0.8);
 @define-color transp_fg alpha(@window_fg_color, 0.8);
+@define-color transp_fg_inactive alpha(@scrollbar_outline_color, 0.8);
